# continuous-garch

./: README.md  pyproject.toml
continuous_garch/: correlated.py  model.py
data/: SPY.csv
