[tool.poetry]
name = "continuous-garch"
version = "0.1.0"
description = ""
authors = ["Oracen <alex.stenlake@gmail.com>"]
readme = "README.md"
packages = [{include = "continuous_garch"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "<1.13"
pyro-ppl = "^1.8.2"
pandas = "^1.5.1"
statsmodels = "^0.13.5"
arch = "^5.3.1"
torchsde = "^0.2.5"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
